--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arima:wght@300&family=Dancing+Script&family=Oswald&display=swap" rel="stylesheet">
 
   <!-- link css -->
   <link rel="stylesheet" href="css/main.css">
@@ -25,10 +25,10 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg">
+      <div class="logo">
+        <img src="img/nailsbybarbi.png" alt="">
+      </div>
       <div class="container-fluid">
-        <h1>
-          <img src="img/nailsbybarbi.png" alt="">
-        </h1>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse"       data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -66,12 +66,16 @@
       </div>
     </div>
     <div class="contacto">
-      <a href="https://www.instagram.com/barbienailsalon/" target="_blank">
-        <img src="img/instalogo.png" alt="">
-      </a>
-      <a href="https://wa.me/5491123340614" target="_blank">
-      <img src="img/whatsapp.png" alt="">
-      </a>  
+      <div class="insta">
+        <a href="https://www.instagram.com/barbienailsalon/" target="_blank">
+          <img src="img/instalogo.png" alt="">
+        </a>
+      </div>
+      <div class="wsp">
+        <a href="https://wa.me/5491123340614" target="_blank">
+        <img src="img/whatsapp.png" alt="">
+        </a> 
+      </div> 
     </div>
   </main>
   <footer>
