--- a/index.html
+++ b/index.html
@@ -8,13 +8,12 @@
 
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
-  integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-  crossorigin="anonymous">
+    integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 
   <!-- fuentes -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Arima:wght@300&family=Dancing+Script&family=Oswald&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Arima:wght@300&family=Dancing+Script&family=Lobster&family=Oswald&display=swap" rel="stylesheet">
 
   <!-- link css -->
   <link rel="stylesheet" href="css/main.css">
@@ -29,7 +28,7 @@
         <img src="img/nailsbybarbi.png" alt="">
       </div>
       <div class="container-fluid">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse"       data-bs-target="#navbarNav"
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -39,7 +38,7 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" href="#">Mi Trabajo</a>
+              <a class="nav-link active" href="">Mi Trabajo</a>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#">Certificados</a>
@@ -51,20 +50,57 @@
       </div>
     </nav>
   </header>
-  <main class="menu-home">
-    <div class="sobre-mi">
-      <h2>Barbara Tais Martinez</h2>
-      <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ut modi. Quidem perspiciatis nam
-        et velit iusto voluptate perferendis culpa quaerat! Labore iure eaque eveniet nisi voluptatum impedit tenetur.
-        Rerum veniam natus aspernatur distinctio libero nihil aliquid nisi. Magnam officiis ut, deserunt illum
-        reprehenderit laudantium, ab nostrum quibusdam vitae voluptates doloremque nihil. Maxime consequatur unde
-        maiores accusamus ipsam dicta?
-      </p>
-      <div class="contenedor-foto">
-        <img class="foto" src="img/perfil.jpg" alt="">
+  <main>
+    <div class="titulo">
+      <h1>Bienvenidos a Nails by Barbi</h1>
+    </div>
+    <div class="menu-home">
+      <div class="sobre-mi">
+        <h2>Me Presento</h2>
+        <span>Barbara Tais Martinez</span>
+        <p>
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit rerum ut modi. Quidem perspiciatis nam
+          et velit iusto voluptate perferendis culpa quaerat! Labore iure eaque eveniet nisi voluptatum impedit tenetur.
+          Rerum veniam natus aspernatur distinctio libero nihil aliquid nisi. Magnam officiis ut, deserunt illum
+          reprehenderit laudantium, ab nostrum quibusdam vitae voluptates doloremque nihil. Maxime consequatur unde
+          maiores accusamus ipsam dicta?
+        </p>
+        <div class="contenedor-foto">
+          <img class="foto" src="img/perfil.jpg" alt="">
+        </div>
       </div>
     </div>
+    
+    <section class="mi-trabajo">
+      <div class="subtitulo">
+        <h3>Mis trabajos</h3>
+      </div>
+      <div class="container-unas">
+        <img src="img/unasceleste.jpg" alt="">
+      </div>
+      <div class="container-unas">
+        <img src="img/unascolores.jpg" alt="">
+      </div>
+      <div class="container-unas">
+        <img src="img/unasfucsia.jpg" alt="">
+      </div>
+      <div class="container-unas">
+        <img src="img/unaslibre.jpg" alt="">
+      </div>
+      <div class="container-unas">
+        <img src="img/unasmariposa.jpg" alt="">
+      </div>
+      <div class="container-unas">
+        <img src="img/unasquince.jpg" alt="">
+      </div>
+    </section>
+
+    <div class="ubicacion">
+      <div class="mapa">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d4637.887118228775!2d-58.59809069604135!3d-34.71825734939444!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe08ae434f34644a8!2sBarrio%20Privado%20Juan%20Grande!5e0!3m2!1ses-419!2sar!4v1657075787405!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+    </div>
+
     <div class="contacto">
       <div class="insta">
         <a href="https://www.instagram.com/barbienailsalon/" target="_blank">
@@ -73,9 +109,9 @@
       </div>
       <div class="wsp">
         <a href="https://wa.me/5491123340614" target="_blank">
-        <img src="img/whatsapp.png" alt="">
-        </a> 
-      </div> 
+          <img src="img/whatsapp.png" alt="">
+        </a>
+      </div>
     </div>
   </main>
   <footer>
